--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@
 # Скопируйте этот файл в .env и заполните своими значениями
 
 # Токен бота от BotFather
-BOT_TOKEN=your_bot_token_here
+BOT_TOKEN=6822911822:AAEhScvogLG5sDxFzynXBlwPkqHHzJO1lgs
 
 # ID администраторов через запятую (узнать можно у @userinfobot)
-ADMIN_IDS=123456789,987654321
+ADMIN_IDS=5111968766
 
 # URL базы данных (по умолчанию SQLite)
 DATABASE_URL=sqlite+aiosqlite:///bot_database.db
